# QEABoat

./: README.md
PiServer/: CMakeLists.txt  main.cpp
QEABoat/: Untitled  settings.gradle
QEABoat/app/: build.gradle
QEABoat/app/release/: output-metadata.json
QEABoat/app/src/androidTest/java/com/busybox/qeaboat/: ExampleInstrumentedTest.java
QEABoat/app/src/main/: AndroidManifest.xml
QEABoat/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
QEABoat/app/src/main/res/layout/: activity_main.xml
QEABoat/app/src/main/res/values/: strings.xml  themes.xml
QEABoat/app/src/main/res/values-night/: themes.xml
QEABoat/gradle/wrapper/: gradle-wrapper.properties
QEABoatSTM32/: .cproject  .mxproject  .project  CMakeLists.txt  QEABoatSTM32.ioc  stm32f103c8_blue_pill.cfg  引脚配置.xlsx
QEABoatSTM32/Core/Inc/: main.h
QEABoatSTM32/Core/Src/: main.c  stm32f1xx_hal_msp.c
QEABoatServer/: .project
QEABoatServer/src/main/: Config.java  Log.java  QEABoatServerMain.java  StatusMachine.java
QEABoatServer/src/paramServer/: APPHandler.java  APPListener.java  BoatHandler.java  BoatListener.java  ParamData.java  ParamServerLauncher.java
demo/: CMakeLists.txt  demo copy 2.cpp  demo copy.cpp  demo.cpp
ijkplayer/IJKDemo/: .project
ijkplayer/IJKDemo/res/layout/: activity_main.xml
ijkplayer/IJKDemo/res/menu/: main.xml
ijkplayer/IJKDemo/res/values/: strings.xml
ijkplayer/IJKDemo/src/com/ljx/ijkdemo/: MainActivity.java  VideoPlayerIJK.java  VideoPlayerListener.java
ijkplayer/so/armeabi-v7a/: libijkffmpeg.id2  libijkffmpeg.nam
rtmp/: nginx.conf  pull.sh  push.sh
(+8 files in other folders)
